--- a/documentation/phishing.html
+++ b/documentation/phishing.html
@@ -4,20 +4,23 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Le phishing</title>
-	<link rel="stylesheet" type="text/css" href="../css/documentations.css" />
+	<link rel="stylesheet" type="text/css" href="../css/phis_style.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="../js/transition.js"></script>
 </head>
 
 <body>
+	
     <div class="transition transition is-active"></div>
 
     <header class="header">WallHack - Le phishing</header>
-</br>
-</br>
-    <div class="titre1">
-    	<h2 style="text-align:center;">le test 1</h2>
+
+	<div >
+    	<h2 class="titre1" style="text-align:center;">le test 1</h2>
     </div>
+</br>
+</br>
+    
 
     <nav class="navbar">
 		<ul class="navbar-menu">
