--- a/documentation/phishing.html
+++ b/documentation/phishing.html
@@ -14,51 +14,34 @@
     <div class="transition transition is-active"></div>
 
     <header class="header">WallHack - Le phishing</header>
-<<<<<<< HEAD
 </br>
 </br>
-   	<div class="titre1">
+  	<div class="titre1">
     	<h1 style="text-align:center;"><u><strong>Le phishing</strong></u></h1>
     </div>
-    <div class="texte1">
+ <!--    <div class="texte1">
     	<h3 style="text-align:center;">L’hameçonnage (phishing en anglais) est une technique frauduleuse destinée à leurrer l’internaute pour l’inciter à communiquer des données personnelles (comptes d’accès, mots de passe…) et/ou bancaires en se faisant passer pour un tiers de confiance.
 		Il peut s’agir d’un faux message, SMS ou appel téléphonique de banque, de réseau social, d’opérateur de téléphonie, de fournisseur d’énergie, de site de commerce en ligne, d'administrations, etc.
 		Le but recherché est de voler des informations personnelles ou professionnelles (comptes, mots de passe, données bancaires…) pour en faire un usage frauduleux.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		•	Ne communiquez jamais d’informations sensibles par messagerie ou téléphone : aucune administration ou société commerciale sérieuse ne vous demandera vos données bancaires ou vos mots de passe par message électronique ou par téléphone.
-			•	Avant de cliquer sur un lien douteux, positionnez le curseur de votre souris sur ce lien (sans cliquer) ce qui affichera alors l’adresse vers laquelle il pointe réellement afin d’en vérifier la vraisemblance ou allez directement sur le site de l’organisme en question par un lien favori que vous aurez vous-même créé. Vérifiez l’adresse du site qui s’affiche dans votre navigateur. Si cela ne correspond pas exactement au site concerné, c’est très certainement un site frauduleux. Parfois, un seul caractère peut changer dans l’adresse du site pour vous tromper. Au moindre doute, ne fournissez aucune information et fermez immédiatement la page correspondante.
-			•	En cas de doute, contactez si possible directement l’organisme concerné pour confirmer le message ou l’appel que vous avez reçu.
-			•	Utilisez des mots de passes différents et complexes pour chaque site et application afin d’éviter que le vol d’un de vos mots de passe ne compromette tous vos comptes personnels. Vous pouvez également utiliser des coffres forts numériques de type KeePass pour stocker de manière sécurisée vos différents mots de passe.
-			•	Si le site le permet, vérifiez les, date et heure de dernière connexion à votre compte afin de repérer si des accès illégitimes ont été réalisés.
-			•	Si le site vous le permet, activez la double authentification pour sécuriser vos accès.
+<br>
+<br>
+<br>
+<br>
+<br>
+			•	Ne communiquez jamais d’informations sensibles par messagerie ou téléphone : aucune administration ou société 	   commerciale sérieuse ne vous demandera vos données bancaires ou vos mots de passe par message électronique ou par téléphone.<br>
+			•	Avant de cliquer sur un lien douteux, positionnez le curseur de votre souris sur ce lien (sans cliquer) ce qui affichera alors l’adresse vers laquelle il pointe réellement afin d’en vérifier la vraisemblance ou allez directement sur le site de l’organisme en question par un lien favori que vous aurez vous-même créé. Vérifiez l’adresse du site qui s’affiche dans votre navigateur. Si cela ne correspond pas exactement au site concerné, c’est très certainement un site frauduleux. Parfois, un seul caractère peut changer dans l’adresse du site pour vous tromper. Au moindre doute, ne fournissez aucune information et fermez immédiatement la page correspondante.<br>
+			•	En cas de doute, contactez si possible directement l’organisme concerné pour confirmer le message ou l’appel que vous avez reçu.<br>
+			•	Utilisez des mots de passes différents et complexes pour chaque site et application afin d’éviter que le vol d’un de vos mots de passe ne compromette tous vos comptes personnels. Vous pouvez également utiliser des coffres forts numériques de type KeePass pour stocker de manière sécurisée vos différents mots de passe.<br>
+			•	Si le site le permet, vérifiez les, date et heure de dernière connexion à votre compte afin de repérer si des accès illégitimes ont été réalisés.<br>
+			•	Si le site vous le permet, activez la double authentification pour sécuriser vos accès.<br>
 		</h3>
     </div>
+
     <div class="titre1-2">
     	<h2>Comment s’en protéger, les mesures préventives</h2>
-=======
-
-	<div >
-    	<h2 class="titre1" style="text-align:center;">le test 1</h2>
->>>>>>> d3f842efa42bfca68d91332b964c9f7990fba9fd
-    </div>
 </br>
 </br>
-    
-
+    -->
     <nav class="navbar">
 		<ul class="navbar-menu">
 			<li class="navbar-item">
