--- a/documentation/phishing.html
+++ b/documentation/phishing.html
@@ -19,7 +19,8 @@
   	<div class="titre1">
     	<h1 style="text-align:center;"><u><strong>Le phishing</strong></u></h1>
     </div>
- <!--    <div class="texte1">
+<!--     
+     <div class="texte1">
     	<h3 style="text-align:center;">L’hameçonnage (phishing en anglais) est une technique frauduleuse destinée à leurrer l’internaute pour l’inciter à communiquer des données personnelles (comptes d’accès, mots de passe…) et/ou bancaires en se faisant passer pour un tiers de confiance.
 		Il peut s’agir d’un faux message, SMS ou appel téléphonique de banque, de réseau social, d’opérateur de téléphonie, de fournisseur d’énergie, de site de commerce en ligne, d'administrations, etc.
 		Le but recherché est de voler des informations personnelles ou professionnelles (comptes, mots de passe, données bancaires…) pour en faire un usage frauduleux.
@@ -39,9 +40,10 @@
 
     <div class="titre1-2">
     	<h2>Comment s’en protéger, les mesures préventives</h2>
+-->
 </br>
 </br>
-    -->
+    
     <nav class="navbar">
 		<ul class="navbar-menu">
 			<li class="navbar-item">
