--- a/documentation/phishing.html
+++ b/documentation/phishing.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Le phishing</title>
+	<title>WallHack - Le phishing</title>
 	<link rel="stylesheet" type="text/css" href="../css/documentations.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="../js/transition.js"></script>
@@ -22,7 +22,7 @@
 		
 		<div class="text">
 			<p>
-				<c>L’hameçonnage</c> (phishing en anglais) est une technique <strong>frauduleuse</strong> destinée à <strong>leurrer</strong> l’internaute pour l’inciter à communiquer des <strong>données personnelles</strong> (comptes d’accès, mots de passe…) et/ou bancaires en se faisant passer pour un tiers de confiance.
+				L’hameçonnage (phishing en anglais) est une technique <strong>frauduleuse</strong> destinée à <strong>leurrer</strong> l’internaute pour l’inciter à communiquer des <strong>données personnelles</strong> (comptes d’accès, mots de passe…) et/ou bancaires en se faisant passer pour un tiers de confiance.
 				Il peut s’agir d’un faux message, SMS ou appel téléphonique de banque, de réseau social, d’opérateur de téléphonie, de fournisseur d’énergie, de site de commerce en ligne, d'administrations, etc.
 				Le but recherché est de voler des <strong>informations personnelles ou professionnelles</strong> (comptes, mots de passe, données bancaires…) pour en faire un usage frauduleux.
 			</p>
