--- a/documentation/phishing.html
+++ b/documentation/phishing.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Le phishing</title>
-	<link rel="stylesheet" type="text/css" href="../css/phis_style.css" />
+	<link rel="stylesheet" type="text/css" href="../css/documentations.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="../js/transition.js"></script>
 </head>
@@ -17,21 +17,21 @@
 </br>
 </br>
 	<div class="container">
-		<div class="titre1">
-			<h1 style="text-align:center;"><u><strong>Le phishing</strong></u></h1>
+		<div class="title">
+			Le phishing
 		</div>
 		
-		<div class="texte1">
+		<div class="text">
 			<p><c>L’hameçonnage</c> (phishing en anglais) est une technique <strong>frauduleuse</strong> destinée à <strong>leurrer</strong> l’internaute pour l’inciter à communiquer des <strong>données personnelles</strong> (comptes d’accès, mots de passe…) et/ou bancaires en se faisant passer pour un tiers de confiance.
 			Il peut s’agir d’un faux message, SMS ou appel téléphonique de banque, de réseau social, d’opérateur de téléphonie, de fournisseur d’énergie, de site de commerce en ligne, d'administrations, etc.
 			Le but recherché est de voler des <strong>informations personnelles ou professionnelles</strong> (comptes, mots de passe, données bancaires…) pour en faire un usage frauduleux.
 			</p>
 
 		</div>
-		<div class="titre1-2">
+		<div class="subtitle">
 			<h2>Comment s’en protéger, les mesures préventives</h2>
 		</div>
-		<div class="texte1">
+		<div class="text">
 			<li>Ne communiquez jamais d’informations sensibles par messagerie ou téléphone : aucune administration ou une société commerciale sérieuse ne vous demandera vos données bancaires ou vos mots de passe par message électronique ou par téléphone.</li><br>
 			<li>Avant de cliquer sur un lien douteux, positionnez le curseur de votre souris sur ce lien (sans cliquer) ce qui affichera alors l’adresse vers laquelle il pointe réellement afin d’en vérifier la vraisemblance ou allez directement sur le site de l’organisme en question par un lien favori que vous aurez vous-même créé. Vérifiez l’adresse du site qui s’affiche dans votre navigateur. Si cela ne correspond pas exactement au site concerné, c’est très certainement un site frauduleux. Parfois, un seul caractère peut changer dans l’adresse du site pour vous tromper. Au moindre doute, ne fournissez aucune information et fermez immédiatement la page correspondante.</li><br>
 			<li>En cas de doute, contactez si possible directement l’organisme concerné pour confirmer le message ou l’appel que vous avez reçu.<br>
