--- a/documentation/phishing.html
+++ b/documentation/phishing.html
@@ -29,7 +29,7 @@
 
 		</div>
 		<div class="subtitle">
-			<h2>Comment s’en protéger, les mesures préventives</h2>
+			<p>Comment s’en protéger, les mesures préventives</p>
 		</div>
 		<div class="text">
 			<li>Ne communiquez jamais d’informations sensibles par messagerie ou téléphone : aucune administration ou une société commerciale sérieuse ne vous demandera vos données bancaires ou vos mots de passe par message électronique ou par téléphone.</li><br>
