--- a/documentation/phishing.html
+++ b/documentation/phishing.html
@@ -71,7 +71,7 @@
         <div></div>
     </div>
         <footer class="footer">
-		<p>Copyright © WallHack</p>
+		<p>Tom et Cedric 16/01/2022  Copyright © WallHack</p>
 	</footer>
 
 </body>
